--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-
 @custom-variant dark (&:is(.dark *));
-
+@import "./theme.css";
 @theme inline {
+  
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
