--- a/apps/web/app/theme.css
+++ b/apps/web/app/theme.css
@@ -1,3 +1,5 @@
 @theme {
-  --color-dark-base: #242424;
+  --color-dark-base: #1c1c1c;
+  --color-light-base: #f5f5f5;
+  --color-dark-primary: #121212;
 }
