--- a/apps/web/app/theme.css
+++ b/apps/web/app/theme.css
@@ -1,5 +1,6 @@
 @theme {
-  --color-dark-base: #1c1c1c;
+  --color-primary: #219C90;
   --color-light-base: #f5f5f5;
+  --color-dark-base: #1c1c1c;
   --color-dark-primary: #121212;
 }
