--- a/apps/web/app/theme.css
+++ b/apps/web/app/theme.css
@@ -2,5 +2,5 @@
   --color-primary: #219C90;
   --color-light-base: #f5f5f5;
   --color-dark-base: #1c1c1c;
-  --color-dark-primary: #121212;
+  --color-dark-primary: #0d0d0d;
 }
