--- a/apps/web/app/theme.css
+++ b/apps/web/app/theme.css
@@ -1,5 +1,5 @@
 @theme {
-  --color-primary: #ff0033;
+  --color-primary: #8e46f3;
   --color-light-base: #f5f5f5;
   --color-dark-base: #252525;
   --color-dark-primary: #0d0d0d;
