review card added

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -5,12 +5,12 @@
 @import './theme.css';
 
 .custom-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .custom-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;     /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 @theme inline {
