--- a/apps/web/app/theme.css
+++ b/apps/web/app/theme.css
@@ -1,8 +1,8 @@
 @theme {
     --color-primary: #8e46f3;
     --color-light-base: #f5f5f5;
-    --color-dark-base: #252525;
-    --color-dark-primary: #0d0d0d;
+    --color-dark-base: #121212;
+    --color-dark-primary: #0a0a0a;
 }
 
 @theme {
