--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -222,3 +222,19 @@
     /* example */
     color: #fff !important;
 }
+
+.perspective {
+    perspective: 1000px;
+}
+
+.backface-hidden {
+    backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+    transform: rotateY(180deg);
+}
+
+.transform-style-preserve-3d {
+    transform-style: preserve-3d;
+}
